# LearnOpenGL.hs

GettingStarted/HelloTriangle/: HelloTriangle.cabal  Main.hs
GettingStarted/HelloWindow/: HelloWindow.cabal  Main.hs
